*Empty MediaWiki Message*

--- a/Budism.mw
+++ b/Budism.mw
@@ -2,21 +2,21 @@
 
 '''Budism''' (ka ''buddhism'' vai ''buda usk'') om [[Buddha]] [[Šākjamuni]] (Siddhārtha Gautama; arvadaq 6.–5. aastagasada i.m.a.) oppus ni tuu perrä [[India]]n tegünüq ja säält muialõ levinüq traditsiuun, oppuisi kogo ja kultuur.
 <br />
-Ületsehe om Budismin kats suurõmbat tsihki: Theravaada ja Mahajaana. Mahajaana om populaarsõmb ja seol om rohkõmb vuulõ, näütüses Puhas Maa, Zen, Nichiren, Tiibeti Budism, Shingon, Tendai. Mahajaana alla loetas viil mynikõrd Vadžrajaana tsihki, aq palloq loevaq seod uma  tsihis. 
+Ületsehe om Budismin kats suurõmbat tsihki: Theravaada ja Mahajaana. Mahajaana om populaarsõmb ja tuul om rohkõmb vuulõ, näütüses Puhas Maa, Zen, Nichiren, Tiibedi Budism, Shingon, Tendai. Mahajaana alla loetas viil mynikõrd Vadžrajaana tsihki, aq pal´loq lugõvaq tuud umaette tsihis. 
 <br />
-Budism om levinüq kaq muialõ maailman – arvadas, et maailman om 350 millonit kooniq 1,7 millardit budisti ja seo om üts kõgõ kipõmbini kasujit uskõ.
+Budism om levinüq kaq muial maailman – arvatas, et maailman om 350 mil´lonit kooniq 1,7 millardit budisti ja taa om üts kõgõ kipõmbahe kasujit uskõ.
 <br />
-Kõgõ tähtsämb oppus Budismin om Kolmõ Kalliskivi oppus, mis om: Buddha, Dharma (Säädmüs) ja Sangha (kogokond). Kombõ perrä vannu budist hind Kolmõ Kalliskivi kaitsõ alla, kuq tä pühitsedäs mungas. Mungaq harotavaq viil õigõt eetilist üllenpidämist, mungakogokonna tugõmast, tähelepandmist ja meeleharotusi, pühäkirjotundmist, elämist välänpuul harilikku ütiskunda, usokombit ja muud.
+Kõgõ tähtsämb oppus Budismin om Kolmõ Kalliskivi oppus, mis om: Buddha, Dharma (Säädmüs) ja Sangha (kogukond). Kombõ perrä võetas budist hindä Kolmõ Kalliskivi kaitsõ ala, kuq tä pühitsedäs mungas. Mungaq har´otasõq viil õigõt eetilist üllenpidämist, mungakogukonna tugõmist, tähelepandmist ja meelehar´otuisi, pühäkirätundmist, elämist välänpuul harilikku ütiskunda, usokombit ja muud.
 ==Budismi oppus==
-===Ümbresündide ahhil===
-Tiidsäq elolidsõq (Budismin loetas tiidside elolidside sekkä joht pallalt inemidsi, ynnõ ka eläjit) hõlalõvaq ütsiotsõ tundaq hääd ja varriq halva (halu, kuulu, kurbust jne). Seo mõjo all om elolinõ ütsiotsõ kannatusõahilas (Sanskriti keelen Saṃsāra) ja seo määrä ärq tuu, määndsehe ello elolinõ sünnüs perän kuulu. Budistiq ususeq, et seo ahila saa murdaq, kuq oppiq ärq kaotama hõlalõmist ja hirmu Buddha ja Dharma (Säädmüs) oppuse perrä.
+===Ümbresünde ahhil===
+Tiidsäq elolisõq (Budismin loetai tiidside eloliisi sekkä joht pal´lalt inemiisi, a ka eläjit) ihkasõq kõgõ tundaq hääd ja varriq halva (hallu, kuulu, kurbust jne). Seo mõjo all om elolinõ kõikaig kannatusõahilan (Sanskriti keelen Saṃsāra) ja taa määräs ärq tuu, määndsehe ello elolinõ sünnüs perän kuulmist. Budistiq uskvaq, et taa ahila saa murdaq, kuq oppiq ärq kaotama himostamist ja hirmu Buddha ja Dharma (Säädmüs) oppusõ perrä.
 ===Karma===
-Budismin olõ-i Karma põhjusõ-tulo joud, niguq palloq arvavaq. Karma (Sanskriti keelen "tüü, tego") om tego, miä määrä egä inemise järgmädse jaku ümbresündide ahilas. Hääq, kasuliguq teoq ja halvaq teoq külbäväq miilde seemnit, midä tulõ lõigadaq seon vai mynõn järgmädsen elon.
-===Ümbresünd===
-Kuikiq budistiq usu-i igävädse elovaimo olõmasollu, om ümbresünd mitmõs tsihkis tähtsä. Budismin olõ-i egot vai henge, miä olõsiq lahotõt kygõkogost. Ümbresünd järgmidsihe ellõ om osa kogo ilma köütmisest ja püsümüsest.
-===Kannatusõ tekkümine ja seost priis saaminõ===
-====Neli õilsat tõtõ====
-Neljä õilsa tõtõ oppust piäs ütes keskses oppuses Budismin ja piäs budistligadsõ ilmakaehtusõ hundamendis. Neli õilsat tõtõ seledäväq ärq kannatusõ (ja rahulolõmatusõ), seo tekkümise ja kuis seost priis saiaq. Neli õilsat tõtõ om:
+Budismin olõ-i Karma põhjusõ-tulo joud, niguq pal´loq arvasõq. Karma (Sanskriti keelen "tüü, tego") om tego, miä määräs ärq egä inemise järgmädse jaku ümbresünde ahilan. Hääq, kasuliguq teoq ja halvaq teoq külbväq miilde siimnit, midä tulõ lõigadaq seon vai mynõn järgmädsen elon.
+===Ümbresündümine===
+Kuikiq budistiq usu-i igävädse elovaimo olõmanolõmistõ, om ümbresündümine mitmõn tsihin tähtsä. Budismin olõ-i egot vai henge, miä olõsiq lahotõt kygõkogost. Ümbresündümine järgmäidsihe ellõ om osa kogo ilma köütmisest ja püsümüsest.
+===Kannahtusõ tekkümine ja tuust priis saaminõ===
+====Neli ausat tõtõ====
+Nelä ausa tõõ oppust peetäs ütes päämädses oppusõs Budismin ja piäs budistligadsõ ilmakaehtusõ hundamendis. Neli ausat tõtõ seletäseq ärq kannahtusõ (ja rahulolõmatusõ), taa tekkümise ja kuis taast priis saiaq. Neli ausat tõtõ ommaq:
 # Kannatusõ tõtõ
 # Kannatusõ tekkümise tõtõ
 # Kannatusõ kistumisõ tõtõ
