/* Neli ausat tõtõ */

--- a/Budism.mw
+++ b/Budism.mw
@@ -17,11 +17,12 @@ Kuikiq budistiq usu-i igävädse elovaimo olõmanolõmistõ, om ümbresündümin
 ===Kannahtusõ tekkümine ja tuust priis saaminõ===
 ====Neli ausat tõtõ====
 Nelä ausa tõõ oppust peetäs ütes päämädses oppusõs Budismin ja piäs budistligadsõ ilmakaehtusõ hundamendis. Neli ausat tõtõ seletäseq ärq kannahtusõ (ja rahulolõmatusõ), taa tekkümise ja kuis taast priis saiaq. Neli ausat tõtõ ommaq:
-# Kannatusõ tõtõ
-# Kannatusõ tekkümise tõtõ
-# Kannatusõ kistumisõ tõtõ
-# Kannatusõ kistumisõni viivä tii tõtõ
-Edimäne tõtõ seledä ärq kannatuse olõgi. Seo perrä om kannatusõl kolm umahust: füüsiline kannatus (vanas saaminõ, koolminõ, haigus), püsümätüse kannatus (lepmätüs asjo muutumisõga), elo häädümise ja lõpmadusõga lepmätüse kannatus. Tõnõ tõtõ lausu, et kannatus tekkü hõlalõmisõst, miä tulõ rumalusõst. Kolmas tõtõ lausu, et kannatusõst saa tävveste priis ja neläs lausu kuis seod saa.
+# Kannahtusõ tõtõ
+# Kannahtusõ tekkümise tõtõ
+# Kannahtusõ kistumisõ tõtõ
+# Kannahtusõ kistumisõni viivä tii tõtõ
+Edimäne tõtõ seletäs ärq kannahtusõ olõgi. Tuu perrä om kannahtusõl kolm umahust: füüsiline kannahtus (vanas saaminõ, kuulminõ, haigus), püsümätüse kannatus (lepmätüs asjo muutumisõga), elo häädümise ja lõpmatusõga lepmätüse kannahtus. Tõnõ tõtõ ütles, et kannahtus tekkü himostamisõst, miä tulõ rumalusõst. Kolmas tõtõ ütles, et kannahtusõst saa tävveste priis ja neläs ütles, kuis tuud saa.
+
 ====Õilis katõssajaolinõ tii====
 Neläs õilis tõtõ omgi katõssajaolinõ tii ja seon om katõssa ütstõsõga köütet sammu, midä edendädes jovva kannatusõ kakkõmisõni. Neoq om:
 {| class="wikitable"
