--- a/Budism.mw
+++ b/Budism.mw
@@ -23,41 +23,42 @@ Nelä ausa tõõ oppust peetäs ütes päämädses oppusõs Budismin ja piäs bu
 # Kannahtusõ kistumisõni viivä tii tõtõ
 Edimäne tõtõ seletäs ärq kannahtusõ olõgi. Tuu perrä om kannahtusõl kolm umahust: füüsiline kannahtus (vanas saaminõ, kuulminõ, haigus), püsümätüse kannatus (lepmätüs asjo muutumisõga), elo häädümise ja lõpmatusõga lepmätüse kannahtus. Tõnõ tõtõ ütles, et kannahtus tekkü himostamisõst, miä tulõ rumalusõst. Kolmas tõtõ ütles, et kannahtusõst saa tävveste priis ja neläs ütles, kuis tuud saa.
 
-====Õilis katõssajaolinõ tii====
-Neläs õilis tõtõ omgi katõssajaolinõ tii ja seon om katõssa ütstõsõga köütet sammu, midä edendädes jovva kannatusõ kakkõmisõni. Neoq om:
+====Ausa katõssajaolinõ tii====
+Neläs ausa tõtõ omgi katsajaolinõ tii ja tuun om katõssa ütstõsõga köüdetüt sammu, midä edenden joud kannahtuisi kaomisõni. Neoq om:
 {| class="wikitable"
 |-
-! Alajaotus
+! Alljago
 ! Samm
 ! Seletüs
 |-  style="background:#cff;"
-| rowspan="2" | Hamatsõminõ
+| rowspan="2" | Mõtõq
 | 1. Õigõ kaehtus
-| Õigõ tõtõhus reaalsusõst, joht sääne, määndsenä seo paistu
+| Õigõ arvosaaminõ reaalsusõst, mitte sääne, määne taa paistus
 |-  style="background:#cff;"
-| 2. Õigõ kavatsus
-| Hõllahus priis saiaq, ilmlikkõ suuve salgaminõ
+| 2. Õigõ plaan
+| Tahtmisõst priis saiaq, ilmlikkõ suuvõ salgaminõ
 |- style="background:#cfc;"
 | rowspan="3" | Üllenpidämine
-|3. Õigõ kõnõ
-| Tulõ kynõldaq pallalt tõtõt, ei tohiq kynnõgaq via tettäq
+|3. Õigõ kõnõq
+| Tulõ õnnõ õigust kõnõldaq, ei tohiq kynnõgaq vika tetäq
 |- style="background:#cfc;" 
 | 4. Õigõ tego
-|  Ei tohiq teogaq via tettäq
+|  Ei tohiq teogaq vika tetäq
 |- style="background:#cfc;" 
 | 5. Õigõ eloviis
-|  Ei tohiq eloviisigaq via tettäq
+|  Ei tohiq eloviiegaq vika tetäq
 |- style="background:#fc9;"
-| rowspan="3" | Keskenduminõ
+| rowspan="3" | Keskendümine
 |6. Õigõ püüdlüs
 |  Tulõ püüdäq õigõhe arõdaq
 |- style="background:#fc9;"
 | 7. Õigõ perrämõtlõminõ
-|  Tulõ tähele pandaq asjo õigõt olõkit; tulõ tähele pandaq hind nii, kuis perisihe oldas, ilma hõlalõmisita ja tähelepandmisõ kaihtumisõta
+|  Tulõ tähele pandaq asjo õigõt olõkit; tulõ tähele pandaq hinnäst nii, kuis periselt oldas, ilma tahtmiisildaq ja tähelepandmisõ kaihtumisõlda
 |- style="background:#fc9;"
-| 8. Õigõ keskenduminõ
-| Õigõ meeleharotusõ (meditatsiooni) tarvitaminõ, õigõ keskenduminõ
+| 8. Õigõ keskendümine
+| Õigõ meelehar´otusõ (meditatsiooni) tarvitaminõ, õigõ keskendümine
 |}
+
 ===Nirvana===
 Nirvana tähendä ümbresündide ahilast priis saamist. Õdagumaiõl tundas seod kuq virgumist. Oma meele Nirvanani veenüq elolinõ lätt kooldõs Parinirvanahe ja ei sünnü inämb ümbre. Myni Budismi tsihk ütle, et Nirvana aol või elolisõl ollaq viil kannatuisiga lepmisõ hätti ja et neoq kaovaq ynnõ Parinirvanan.
 
