/* Ausa katõssajaolinõ tii */

--- a/Budism.mw
+++ b/Budism.mw
@@ -23,7 +23,7 @@ Nelä ausa tõõ oppust peetäs ütes päämädses oppusõs Budismin ja piäs bu
 # Kannahtusõ kistumisõni viivä tii tõtõ
 Edimäne tõtõ seletäs ärq kannahtusõ olõgi. Tuu perrä om kannahtusõl kolm umahust: füüsiline kannahtus (vanas saaminõ, kuulminõ, haigus), püsümätüse kannatus (lepmätüs asjo muutumisõga), elo häädümise ja lõpmatusõga lepmätüse kannahtus. Tõnõ tõtõ ütles, et kannahtus tekkü himostamisõst, miä tulõ rumalusõst. Kolmas tõtõ ütles, et kannahtusõst saa tävveste priis ja neläs ütles, kuis tuud saa.
 
-====Ausa katõssajaolinõ tii====
+====Ausa katsajaolinõ tii====
 Neläs ausa tõtõ omgi katsajaolinõ tii ja tuun om katõssa ütstõsõga köüdetüt sammu, midä edenden joud kannahtuisi kaomisõni. Neoq om:
 {| class="wikitable"
 |-
