--- a/Budism.mw
+++ b/Budism.mw
@@ -60,7 +60,7 @@ Neläs ausa tõtõ omgi katsajaolinõ tii ja tuun om katõssa ütstõsõga köü
 |}
 
 ===Nirvana===
-Nirvana tähendä ümbresündide ahilast priis saamist. Õdagumaiõl tundas seod kuq virgumist. Oma meele Nirvanani veenüq elolinõ lätt kooldõs Parinirvanahe ja ei sünnü inämb ümbre. Myni Budismi tsihk ütle, et Nirvana aol või elolisõl ollaq viil kannatuisiga lepmisõ hätti ja et neoq kaovaq ynnõ Parinirvanan.
+Nirvana tähendä ümbresünümiisi ahilast priis saamist. Õdagumaiõl tundas taad kuq virgumist. Uma meele Nirvanani veenüq elolinõ lätt kooldõn Parinirvanahe ja ei sünnüq inämb ümbre. Myni Budismi tsihk ütles, et Nirvana aol või elolisõl ollaq viil kannahtuisiga lepmise häti ja et nuuq kaosõq ynnõ Parinirvanan.
 
 [[Katõgooria:Budism]]
 
