*Empty MediaWiki Message*

--- a/Zetod.mw
+++ b/Zetod.mw
@@ -1,9 +1,9 @@
 [[Pilt:Zetod 2007.jpg|pisi|Zetod 2007. aastagal]]
-'''Zetod''' om ansambli, koh mängväq pilli ja laulvaq viis [[Setomaa]]lt peri unuurmiist. Näide mängmisviisi üteldas "punklooris", taa om sego [[rahvalaul]]ust, [[rokk|rokist]] ja [[punk|pungist]]. Poisiq laulvaq õnnõ [[seto keel]]i.
+'''Zetod''' om ansambli, koh mängväq pilli ja laulvaq viis [[Setomaa]]lt peri nuurtmiist. Näide mängmisviisi üteldäs "punklooris", taa om sego [[rahvalaul]]ust, [[rokk|rokist]] ja [[punk|pungist]]. Poisiq laulvaq õnnõ [[seto keel]]i.
 
-Ansambli Zetod nakas kuun mängmä 2003. aastagal. Algusõn olliq sääl [[Vabarna Jalmar]], [[Linnusõ Artur]], [[Viskari Jaanus]] ja Purika Alar, a edimädse helütsõõri "Lätsi vällä kaema" pääl, miä tull' vällä 2005. aastaga suvõl, mängse trummi joba Puurmaa Heinar. Seos ajas nä olliq üles astnu joba uma puulsajal kõrral, näütüses esigi Villändi folgil.
+Ansambli Zetod nakas' kuun mängmä 2003. aastagal. Algusõn olliq sääl [[Vabarna Jalmar]], [[Linnusõ Artur]], [[Viskari Jaanus]] ja Purika Alar, a edimädse helütsõõri "Lätsi vällä kaema" pääl, miä tull' vällä 2005. aastaga suvõl, mängse trummi joba Puurmaa Heinar. Tuus aos nä olliq üles astnu joba uma poolõl saal kõrral, näütüses esiii Villändi folgil.
 
-Tõõsõ tsõõrigu "Lätsi tarrõ tagasi" andsiq nä vällä 2008. aastagal. Tuu pääl laulvaq ka naasõq – [[Tsibihärbläseq]].
+Tõõsõ tsõõrigu "Lätsi tarrõ tagasi" andsõq nä vällä 2008. aastagal. Tuu pääl laulvaq ka naasõq – [[Tsibihärbläseq]].
 
 Näide kolmas helütsõõr "Lätsi sanna" tull' vällä 2010. aastagal. Taa om pääle võetu [[Soomõ]]maal.
 
@@ -14,7 +14,7 @@ Näide kolmas helütsõõr "Lätsi sanna" tull' vällä 2010. aastagal. Taa om p
 * [[Leima Matis]]  - [[kiiga]], karmoška, laul
 * [[Küti Martin]] – trummiq
 
-==Pruugit lätteq==
+==Pruugiduq lätteq==
 * [http://www.umaleht.ee/index.php?leht=1055&keel=36 "Setopois'kõisi plaat'"] Uma Leht, süküskuu 27. päiv, 2005
 *[http://www.umaleht.ee/index.php?leht=4582&keel=159 "Üte huuga tettü plaat"] Uma leht, hainakuu 13. päiv, 2010
 
