--- a/Nõglapai.mw
+++ b/Nõglapai.mw
@@ -1,4 +1,4 @@
-'''Nõglapai''' (e. k. ''astelpaju'') om kasvotiidelisõh mõttõh hõpõpuuliidsi sugukunda kuuluja puhm vai puu.<br />
+[[Pilt:Hippophae rhamnoides-01 (xndr).jpg|pisi|Nõglapaiu puhm]]'''Nõglapai''' (e. k. ''astelpaju'') om kasvotiidelisõh mõttõh hõpõpuuliidsi sugukunda kuuluja puhm vai puu.<br />
 Ahtabah tähendüseh om tego hariligu nõglapaiugaq (ld. k. ''Hippophae rhamnoides''), laebah tähendüseh nõglapaiu perregaq.
 == Nõglapaiu pereh ==
 Päält hariligu nõglapaiu arvatas perrehe kuuluvat viil kuus' tõugu:
