--- a/Nõglapai.mw
+++ b/Nõglapai.mw
@@ -20,4 +20,4 @@ Harilik nõglapai om seeniq ainukõnõ nõglapaiu perrehe kuuluja tõug, minkast
 == Tarbõndaminõ  ==
 Taa om mitmõkeskene maatüükultuur', mink kasvataminõ om ütlemäldäq keskkunnahoitlik ni suurõbat ossa kasvost saa eri viisõl tarbõndaq. Kodaiduh kasvatõdas ehtepuu ja mar'apuhmana. Õt om mullastigu suhtõh veid'oqnõudlik, om katsõtõt perätüide palajakivikaibõtustõ hal'astamist nõglapaiugaq. Nõglapaiu mar'aq ni siimnist tet õli ommaq tervisliguq. Tarvitõdas mitmidõ paatskatuisi tegemisõst.
 
-[[Katõgooria:Teräviläq]]
+[[Katõgooria:Puuq]]
