*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -16,6 +16,7 @@ Ku võtat võistlusõst ossa, sis olõq hää, panõq siiäq lehe pääle kirjä
 * [[Mansiq]]. [[Pruukja:Kerliplat|Kerliplat]] ([[Pruukja arotus:Kerliplat|arotus]])
 * [[Johannese Kuul Rosmal]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 * [[Katripäiv]]. [[Pruukja:Krõõt|Krõõt]] ([[Pruukja arotus:Krõõt|arotus]])
+* [[Nõglapai]]. (seto keeleh, tõl'git ja lühendet/tävvendet eestiviki artikli) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 
 
 [[katõgooria:Vikipeediä]]
