--- a/Mõlapäiv.mw
+++ b/Mõlapäiv.mw
@@ -11,13 +11,13 @@ Mõlapäivä peetäs joq vaga Mõla Onufri aigõst. Taa om tänopühä, mink saa
 === Vaga Mõla Onufri kotsilõ ===
 Vaga Mõla Onufri ([[slaavi|sl]] k ''преподобный Онуфрий Мальский'') om Mõla Jumalaimä mastõra asotaja. Kats' Setomaa pühämiist - Mõla Onufri ja Irboska Serapion - oll'iq õkvakuq veleq. Nä ihatõlõdiq kuuh Mõla mastõra käekäügi iist ja oll'i mõlõbaq kaq taa mastõra iguumõniq. Kukkiq Onufri asotõt mastõra häöt' [[1581]]. aastagal uma sõaväegaq katoliiklasõst [[Poola]] kuningas Bátory Stefan, kakõhu-us [[õigõusk|õigõusolinõ]] elo Mõlah ja Irboskah kunagiq.<br />
 Vaga mõla Onufri kuuli külq [[1592]]. aastagal, aq timä nimme meelidsiq Mõla ja Irboska inemiseq viil aastasato niq kutsõq Mõla mastõrat õks Onufri mastõrast.<br />
-Pühämiis Onufrilõ om pühitset Mõla tsässon. Tuu om kest küllä nelä tii ristih suuri lõhmussidõ all. 
+Pühämiis Onufri aust peetäs teen'stüst Onufri mälehtüspääväl vana kalendri 25. (vahtsõ kalendri perrä 12.) hainakuu pääväl Mõla tsässonah. Tuu om kest küllä nelä tii ristih suuri lõhmussidõ all. 
 == Kuis peetäs ==
 Mõla ker'koh om peet ni eesti- kuq vinnekiil'sit teenistüisi, parhilladsõl aol ommaq kontroll'joonõ taadõ jäänüq seto kogohusõ tegemisõq vaibunuq. Tuugiperäst om mõlapäiv tähtsä kokkosaamisõ võimalus säält kandi rahvalõ.<br />
 Õga aastaga tahtvaq õks mõlapääväst kodopaika kaema tullaq kaq [[Petserimaa]]lt Eestimaalõ arq tulnuq inemisõq.<br />
-Ületsehe om mõlapäiv kombõkotsinõ kerigupühä jumalateenistüse ja ristikäügigaq. Vanõbaq inemisõq kõnõlasõq, õt Mõlah viidi kõõ ütte pühäsekeist ümbre kerigu ja tuu oll' sääne, miä tek' tervest, kuq haigõ oll'eq.<br />
+Ületsehe om mõlapäiv kombõkotsinõ kerigupühä jumalateenistüse ja ristikäügigaq. Vanõbaq inemisõq kõnõlasõq, õt Mõlah viidi kõõ ütte pühäsekeist ümbre kerigu ja tuu oll' sääne, miä tek' tervest, kuq haigõ oll'eq. Mõni aastak oll' ristikäügü jaost kaq lillivaip tet.<br />
 Kerigu man umatsidõ haudu pääl süvväs ja kõnõldas ummi tutvidõgaq. Taa kommõq tegegi seto pühäq esiqsugudsõst ja seto rahva üttehoitvast.<br />
-Suurõp laat oll' mõlapäävä Petserih, aq suvõl hädäliisi asjugaq, niguq [[vikaht]]iq, tsirbiq ja rihaq, kaubõldi tuupäiv kaq Mõlah.<br />
+Suurõp laat oll' mõlapäävä Petserih, aq suvõl hädätarviliisi asjugaq, niguq [[vikaht]]iq, tsirbiq ja rihaq, kaubõldi tuupäiv kaq Mõlah.<br />
 Päävä populaarsõst panõhtumisõlõ om üteh avitanuq Mõla kandi kotussidõ illos' luudus. Mõla ker'k om jõõ kaldõ pääl. Kerigu all om  pühä [[läteq|läteh]] ja kuq tuu viiga mõst, sis sütüseq arq kõik haigusõq.<br />
 Peräh ker'kot, nigu õks kombõst oll', ilotõdi ja peeti kirmast. [[Vindläseq]] peiq säälsamah Mõla küläh, aq seto rahvas pidi umma praasnikut [[Pokolduva]]h, miä om paar' kilomiitrit kavvõbah.<br />
 Sagõhõhe om olnuq nii, õt mõlapäävä satas [[vihm]]a. Om sääne ütelüs, õt kuq muialõ vihma saa-ai, sis Mõlla õks saa. Ja inämbält nii om kaq. Hot' pisokõnõ, aq tulõ.
