--- a/Põlva.mw
+++ b/Põlva.mw
@@ -23,7 +23,7 @@ Põlva liina pindala om 5,5 km&sup2;. Saisogaq 01.01.2005 elli Põlvan 6440 inem
 
 ==Aolugu ==
 
-Tsaariaol oll' Põlva väikene kerkoküla. 
+Tsaariaol oll' Põlva väikene kerkokülä. 
 
 1910 panti nukakivi Põlva seldsimajalõ, prõllatsõlõ Põlva Keskraamadukogo huunõlõ. Projektiirjä oll' põllumiis ja ehitüsettevõtja Plado Jaan, ehitüsmeistre oll' J. Sarv [[Otõmpää]]lt.
 
