--- a/Kivisild_(Tarto).mw
+++ b/Kivisild_(Tarto).mw
@@ -3,7 +3,7 @@
 
 Silla keskmäne jago oll' puust ja ülesnõsttõtav, ja tuu tekk'  laivaliikmisõ võimaligus. Katsa värehtikaarigaq Kivisild oll' 5,6 miitret laiu, väreht'ikaare man 4 miitrit laiu, ja tuu ehitämisele läts' umbõs 3000 [[graniit]]plokki. Kivisild sai valmis 16. süküskuu pääväl 1784. 
 
-Silla raekuapoolidsõ saina pääl olliq kats kivist tahvlit śaksa- ja ladinakeelitside tekstegaq: SISTE HIC IMPETUS FLUMEN CATHARINA II IUBET CUIUS MUNIFICENTIA HAEC MOLES IN COMMODIUM PUBLICUM EXSTRUCTA LIVIONIA QUEPRIMO PONTE LAPIDEO ADORNATA MDCCLXXXIII ( "Jõgi, piäq siin umma vuulu [[Katariina II]] käsül, kink heldüsest seo sild om ehiteld ja kiä om Liivimaad ilostanuq edimädse kivisillagaq aastagal 1783").
+Silla raekuapoolidsõ saina pääl olliq kats kivist tahvlit śaksa- ja ladinakeelitside tekstegaq: SISTE HIC IMPETUS FLUMEN CATHARINA II IUBET CUIUS MUNIFICENTIA HAEC MOLES IN COMMODUM PUBLICUM EXSTRUCTA LIVIONIAQUE PRIMO PONTE LAPIDEO ADORNATA MDCCLXXXIII ("Jõgi, piäq siin umma vuulu [[Katariina II]] käsül, kink heldüsest seo sild om ehiteld ja kiä om Liivimaad ilostanuq edimädse kivisillagaq aastagal 1783").
 
 Silla õdagpoolõ häöt' [[1941]]. aastagal ärq [[Nõvvokogo Liit|Nõukogude Liido]] syavägi, hummogupoolinõ sillakaar' häädü 1944. aastagal.
 
