*Empty MediaWiki Message*

--- a/Bhutan.mw
+++ b/Bhutan.mw
@@ -3,7 +3,7 @@ Nimi=Bhutan|
 Genitiiv=Bhutani|
 Lipp=Pilt:Flag of Bhutan.svg|
 Vapp=Pilt:Bhutan emblem.svg|
-Kaart=Pilt:LocationBhutan.svg|
+Kaart=Pilt:Bhutan in its region.svg|
 Riigikiil=[[dzongkha kiil]]|
 Pääliin=[[Thimphu]]|
 Suurus=38 394|
