*Empty MediaWiki Message*

--- a/Kanada.mw
+++ b/Kanada.mw
@@ -2,7 +2,7 @@
 Nimi=Kanada<br />Canada|
 Genitiiv=Kanada|
 Lipp=Image:Flag of Canada.svg|
-Vapp'=Image:Canadian Coat of Arms Shield.svg|
+Vapp'=Image:Coat_of_Arms_of_Canada.svg|
 Tunnuslausõq=''A Mari Usque Ad Mare'' ([[Ladina kiil|Ladina keelen]]) <br /> "Merest mereni"|
 Kaart=Image:Canada (orthographic projection).svg|
 Riigikiil'=[[inglüse kiil]], [[prantsusõ kiil]]|
