--- a/Atlandi_suurmeri.mw
+++ b/Atlandi_suurmeri.mw
@@ -1,5 +1,5 @@
 [[Pilt:Atlantic Ocean surface.jpg|250px|thumb]]
-[[Pilt:View from Low Beach, Nantucket MA.jpg|250px|thumb]]
+[[Pilt:Sunset on tenerife canary island atlantic ocean.jpg|250px|thumb]]
 
 '''Atlandi suurmeri''' om suurusõ poolõst tõnõ [[suurmeri]] peräst [[Vaiknõ suurmeri|Vaiksõt suurtmerd]]. 
 
