--- a/Nepal.mw
+++ b/Nepal.mw
@@ -3,7 +3,7 @@ Nimi=Nepal|
 Genitiiv=Nepali|
 Lipp=Pilt:Flag of Nepal.svg|
 Vapp=Pilt:Coat of arms of Nepal.svg|
-Kaart=Pilt:LocationNepal.svg|
+Kaart=Pilt:Nepal in its region.svg |
 Riigikiil=[[nepali kiil]]|
 Pääliin=[[Katmandu]]|
 Suurus=147 181|
