*Empty MediaWiki Message*

--- a/Urvastõ_valla_vapp.mw
+++ b/Urvastõ_valla_vapp.mw
@@ -1,4 +1,4 @@
-[[Image:Urvastõ_valla_vapp.jpg|thumb|Urvastõ valla vapp]]
+[[Image:Urvaste valla vapp.gif|thumb|Urvastõ valla vapp]]
 
 '''Urvastõ valla vapp''' om [[Eesti]] Vabariigi [[valitsõmisütsüs]]e [[Urvastõ vald|Urvastõ valla]] [[vapp]]. 
 
