--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -12,19 +12,19 @@
 |}
 
 
-'''Artiklivõistlust''' peetäs 2013. aastagal võro Vikipeediän edimäist kõrda. Taaga tahetas saiaq Vikipeediäle mano nii artikliid ku ka kirotajit. 
+'''Artiklivõistlust''' peeti 2013. aastagal võro Vikipeediän edimäist kõrda. Taaga taheti saiaq Vikipeediäle mano nii artikliid ku ka kirotajit. 
 
-Võistlus om hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvustaq ja kutsuq näid üten lüümä - Vikipeediät saa jo egäüts esiq tävvendäq. 
+Võistlus oll' hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvustaq ja kutsuq näid üten lüümä - Vikipeediät saa jo egäüts esiq tävvendäq. 
 
-Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) kooniq 2. piimäkuu pääväni (juunini). Võistlõma või tullaq egäl aol tuu vaihõ seen. 
+Võistlust peeti 2013. aastal 2. lehekuu pääväst (maist) kooniq 2. piimäkuu pääväni (juunini). Võistlõma võidsõ tullaq egäl aol tuu vaihõ seen. 
 
-==Kiä või ossa võttaq?==
-Ossa võttaq või egäüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keelen]] kirotaq. Kiä taht ja mõist, või kirotaq ka tõisin [[lõunõeesti kiil|lõunõeesti keelin]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keelen]]; ka nuuq artikliq ommaq väega oodõduq.
+==Kiä võidsõq ossa võttaq?==
+Ossa võttaq võidsõ egäüts (päält sürii liikmidõ), kiä mõist [[võro kiil|võro keelen]] kirotaq. Kiä taht' ja mõist', võidsõ kirotaq ka tõisin [[lõunõeesti kiil|lõunõeesti keelin]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] vai [[tarto kiil|tarto keelen]]; ka nuuq artikliq olliq väega oodõduq.
 
-Osavõtmisõs tulõ hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjas kirjä pandaq]. Kimmähe panõq registriirmise man kirjä ka uma e-postiaadrõs.
+Osavõtmisõs tull' hinnäst kõgõpäält Vikipeediä [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Sisselogimine&returnto=Wikipedia%3AArtikliv%C3%B5istlus+%282013%29+vro&type=signup pruukjas kirjä pandaq]. 
 
-==Minkast kirotaq?==
-Kirotaq või kõgõst, miä om küländ tähtsä, et tuust pidänüq umakeelitsen entsüklopeediän artikli olõma. Häste sünnüseq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema või ollaq köüdet [[Võromaa]] ja võro kultuuriga (nt [[Võromaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a ei piäq, ka muist tähtsist maailma as'ost või kirotaq. Ku hindäl õkva hüvvä mõtõt tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüses 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisin artikliin näüdät.
+==Minkast võidsõ kirotaq?==
+Kirotaq võidsõ kõgõst, miä om küländ tähtsä, et tuust pidänüq umakeelitsen entsüklopeediän artikli olõma. Häste sündüq tunnõduq inemiseq, üritüseq, ütisüseq, kotusõq, eläjä- ja kasvoliigiq, aoluusündmüseq, esiqsugutsidõ tiidüisi mõistõq, jne, jne. Teema võidsõ ollaq köüdet [[Võromaa]] ja võro kultuuriga (nt [[Võromaa inemiseq]], [[Võromaa mäeq ja oroq|mäeq ja oroq]], [[Võromaa järveq|järveq]], [[Võromaa kooliq|kooliq]]), a es piäq, ka muist tähtsist maailma as'ost võidsõ kirotaq. Ku hindäl õkva hüvvä mõtõt tulõ-õi, sis [http://fiu-vro.wikipedia.org/w/index.php?title=Tallituslehek%C3%BClg:Oodatud_lehek%C3%BCljed&limit=500&offset=0 seon nimekirän] om näütüses 500 teemat, mink kotsilõ artiklit viil olõ-õi, a võinuq ollaq, selle et naidõ teemadõ pääle om väega pall'o tõisin artikliin näüdät.
 
 ==Kuis kirotaq?==
 Vahtsõ artikli alostamisõs vaodaq teemadõ nimekirän (vai mõnõn artiklin) sinno huvitava teemaga verevä lingi pääle. Vai kirodaq vahtsõ artikli päälkiri päälehel olõvahe vahtsõ artikli luumisõ kasti ja vaodaq nuppi ''Luuq leht!''. Võit ka valliq joba olõman olõva lühkü artikli ja tuud tävvendäq. Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
@@ -35,23 +35,23 @@ Ku tahat teedäq, määne üts Vikipeediä artikli pidänüq vällä näütämä
 
 Ku olõt artikli valmis saanuq, panõq uma artikli link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|võistlusõst osavõtjidõ artiklite leheküle pääle]], sis saa sürii arvo, et olõt võistlusõst osavõtja. Egäüts või võistlusõlõ pandaq nii pall'o artikliid ku esiq taht.
 
-==Kiä võistlust kõrraldas ja kiä süriin ommaq?==
-Võistlust kõrraldas MTÜ Wikimedia Eesti.
+==Kiä võistlust kõrrald' ja kiä süriin olliq?==
+Võistlust kõrrald' MTÜ Wikimedia Eesti.
 
-Süriin ommaq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
+Süriin olliq [[pruukja:Valdis|Laanõ Valdis]], Iva Triin ja Allasõ Tiia.
 
-==Miä avvohinnas om?==
-Parõmbilõ kirotajilõ ommaq vällä pandnuq avvohinnaq:
+==Miä avvohinnas oll'?==
+Parõmbilõ kirotajilõ olliq vällä pandnuq avvohinnaq:
 
 * '''Kubija Hotell-Luudusspaa''' - spaa- ja sannakeskusõ priipilediq; 
 * '''[[Zetod]], [[Klapp]]''' ja '''[[Kiiora]]''' - egä andsambli kõgõ vahtsõmb lasõrplaat;
 * '''Võro Instituut''' ja '''TÜ Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus''' - umakeelidseq raamaduq ja CD-q.
 
-Võitjaq kuulutõdasõq vällä ja avvohinnaq andasõq kätte 13. piimäkuu pääväl (juunil) kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
+Võitjaq kuulutõdiq vällä ja avvohinnaq antiq kätte 13. piimäkuu pääväl (juunil) kell 18 [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskusõn]] (Lossi 3-134, Tarto).
 
-==Kost saa nõvvo?==
+==Kost sai nõvvo?==
 Kaeq [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]] ja [[Wikipedia:Vikipeediä säädüseq|säädüisi]].
 
-Küsümiisi võit kirotaq seo lehe [[Wikipedia arotus:Artiklivõistlus (2013) vro|arotustõ]] vai saataq e-postiga sulev.iva [ät] ut.ee.
+Küsümiisi võidsõ kirotaq seo lehe [[Wikipedia arotus:Artiklivõistlus (2013) vro|arotustõ]] vai saataq e-postiga sulev.iva [ät] ut.ee.
 
 [[katõgooria:Vikipeediä]]
