--- a/Valgjärve_valla_vapp.mw
+++ b/Valgjärve_valla_vapp.mw
@@ -1,4 +1,4 @@
-[[Image:Valgjärve_valla_vapp.gif|thumb|Valgjärve valla vapp]]
+[[Image:Valgjärve valla vapp.jpg|thumb|Valgjärve valla vapp]]
 
 '''Valgjärve valla vapp''' om [[Eesti]] Vabariigi [[valitsõmisütsüs]]e [[Valgjärve vald|Valgjärve valla]] [[vapp]]. 
 
