*Empty MediaWiki Message*

--- a/Varstu_valla_vapp.mw
+++ b/Varstu_valla_vapp.mw
@@ -1,4 +1,4 @@
-[[Image:Varstu_valla_vapp.gif|thumb|Varstu valla vapp]]
+[[Pilt:Varstu valla vapp.svg|thumb|Varstu valla vapp]]
 
 '''Varstu valla vapp''' om [[Eesti]] Vabariigi [[valitsõmisütsüs]]e [[Varstu vald|Varstu valla]] [[vapp]]. Vapp om kinnütet 5. mahlakuu pääväl 2002.
 
