*Empty MediaWiki Message*

--- a/Saviritsik.mw
+++ b/Saviritsik.mw
@@ -1,6 +1,6 @@
 [[Pilt:Acheta domestica femelle.png|200px|thumb|Saviritsik]]
 
-'''Saviritsik''' ([[Ladina kiil|ladina keeli]] ''Acheta domestica'') om [[mutik]]. Vanast elli tä pia egan talomajan. 
+'''Saviritsik''' ([[Ladina kiil|ladina keeli]] ''Acheta domestica'') om [[mutik]]. Vanast elli saviritsikit pia egan talomajan. 
 
 == Tõisi nimmi ==
 
@@ -9,5 +9,8 @@
 * '''Savilind''' ([[Põlva kihlkund]])
 * '''Tsirkun''' ([[Setomaa]])
 * '''Viruskikas''' ([[Rõugõ kihlkund|Rõugõ]] ja [[Vahtsõliina kihlkund]])
+
+== Kaeq viil ==
+*[[Savvuritsik]]
 
 [[Katõgooria:Mutigaq]]
