*Empty MediaWiki Message*

--- a/Kandsimägi_(Kiräpää).mw
+++ b/Kandsimägi_(Kiräpää).mw
@@ -6,3 +6,5 @@ Kandsimägi um praegutsel aol õnne üts veidü korgõmp kotus Võru-Tartu vana 
 
 '''''Ehitüs:'''''
 Kiräpää loss oll tettüs maakivvõst ja tellistõst. Teiva taa tüü talupoja'. Kui perräjäänü müürõ hästõ kaia sõs um näta, et so om ilostõ tett, kunstiperäselt. Edimõnõ osa oll majalinnüs. Tuulõ nakati sõs vahtsõmbit tornõ ja müürõ mano tegemä. Lõppõs saanu' 45 m kõrda 45 m külgiga ruut.
+
+[[Katõgooria:Põlva kihlkunna mäeq]]
