*Empty MediaWiki Message*

--- a/Kandsimägi_(Kiräpää).mw
+++ b/Kandsimägi_(Kiräpää).mw
@@ -1,3 +1,5 @@
+'''Kiräpää kandsimägi''' om mägi Võro liina küle all Kiräpääl.
+
 '''''Prahilla:'''''
 Kandsimägi um praegutsel aol õnne üts veidü korgõmp kotus Võru-Tartu vana maantii veeren. Kaugõst paistus õnne ütsik tükk müüri. Mäe päält võit häste näta liina ja jõkõ. 
 
