*Empty MediaWiki Message*

--- a/Kandsimägi_(Kiräpää).mw
+++ b/Kandsimägi_(Kiräpää).mw
@@ -1,12 +1,12 @@
-'''Kiräpää kandsimägi''' om mägi Võro liina küle all Kiräpääl.
+'''Kiräpää kandsimägi''' om mägi [[Võro]] liina küle all [[Kiräpää]]l.
 
-'''''Prahilla:'''''
-Kandsimägi um praegutsel aol õnne üts veidü korgõmp kotus Võru-Tartu vana maantii veeren. Kaugõst paistus õnne ütsik tükk müüri. Mäe päält võit häste näta liina ja jõkõ. 
+===Parhilla===
+Kandsimägi um praegutsõl aol õnnõ üts veidüq korgõmp kotus Võro-Tartu vana maantii veeren. Kaugõst paistus õnne ütsik tükk müüri. Mäe päält võit häste näta liina ja jõkõ. 
 
-'''''Aoluust:'''''
+===Aoluust===
 14. aastasaa edimäsel poolel oll Kantsimäe pääl Tarto piiskopi kindlüs. Joba 1322. aastagal käve leedulaisi vürst Gediminas sääl ja lahksõ linnuse maaha. Peräst tetti kindlüs jälki kõrda ja Jüriüü aigu oll sääl sakslaisi pääkorter. Edimäst kõrda häotati linnüst 1558. aastagal, kui ordu ja piiskopi mehe' so palama pandsõva ja noide perrä tulliva vindläse, kiä viil lahksõva. Hulk aigu ildämpa, 1627. aastagal, Ruutsi aol, nakati kindlüst säädmä, a 1656. aastagal lahoti tu peris är ja inämp es säädä. Tiidä um viil, et Ruutsi Karl katetõistkümnes olnu 1701. a. talvõ Kiräpääl. Peräst Võro liina tegemist nakati varemist kivvõ är vidäma ja ao minnõn jää es joht midägi perrä ku õnne nu jupi' mis näta um.
 
-'''''Ehitüs:'''''
+===Ehitüs===
 Kiräpää loss oll tettüs maakivvõst ja tellistõst. Teiva taa tüü talupoja'. Kui perräjäänü müürõ hästõ kaia sõs um näta, et so om ilostõ tett, kunstiperäselt. Edimõnõ osa oll majalinnüs. Tuulõ nakati sõs vahtsõmbit tornõ ja müürõ mano tegemä. Lõppõs saanu' 45 m kõrda 45 m külgiga ruut.
 
 [[Katõgooria:Põlva kihlkunna mäeq]]
