*Empty MediaWiki Message*

--- a/Kandsimägi_(Kiräpää).mw
+++ b/Kandsimägi_(Kiräpää).mw
@@ -1,3 +1,5 @@
+[[Pilt:Kirumpää piiskopilinnus 1.jpg|pisi|Kiräpää kandsimägi]]
+[[Pilt:Kirumpää piiskopilinnus 2.jpg|pisi|Müürü jupiq]]
 '''Kiräpää kandsimägi''' om mägi [[Võro]] liina küle all [[Kiräpää]]l.
 
 ===Parhilla===
