*Empty MediaWiki Message*

--- a/Kandsimägi_(Kiräpää).mw
+++ b/Kandsimägi_(Kiräpää).mw
@@ -3,7 +3,7 @@
 '''Kiräpää kandsimägi''' om mägi [[Võro]] liina küle all [[Kiräpää]]l.
 
 ===Parhilla===
-Kandsimägi um praegutsõl aol õnnõ üts veidüq korgõmp kotus Võro-Tartu vana maantii veeren. Kaugõst paistus õnne ütsik tükk müüri. Mäe päält võit häste näta liina ja jõkõ. 
+Kandsimägi um praegutsõl aol õnnõ üts veidüq korgõmp kotus Võro-[[Tarto]] vana maantii veeren. Kaugõst paistus õnnõ ütsik tükk müürü. Mäe päält võit häste nätäq Võro liina ja [[Võhandu]] jõkõ. 
 
 ===Aoluust===
 14. aastasaa edimäsel poolel oll Kantsimäe pääl Tarto piiskopi kindlüs. Joba 1322. aastagal käve leedulaisi vürst Gediminas sääl ja lahksõ linnuse maaha. Peräst tetti kindlüs jälki kõrda ja Jüriüü aigu oll sääl sakslaisi pääkorter. Edimäst kõrda häotati linnüst 1558. aastagal, kui ordu ja piiskopi mehe' so palama pandsõva ja noide perrä tulliva vindläse, kiä viil lahksõva. Hulk aigu ildämpa, 1627. aastagal, Ruutsi aol, nakati kindlüst säädmä, a 1656. aastagal lahoti tu peris är ja inämp es säädä. Tiidä um viil, et Ruutsi Karl katetõistkümnes olnu 1701. a. talvõ Kiräpääl. Peräst Võro liina tegemist nakati varemist kivvõ är vidäma ja ao minnõn jää es joht midägi perrä ku õnne nu jupi' mis näta um.
