*Empty MediaWiki Message*

--- a/Kandsimägi_(Kiräpää).mw
+++ b/Kandsimägi_(Kiräpää).mw
@@ -6,9 +6,9 @@
 Kandsimägi um praegutsõl aol õnnõ üts veidüq korgõmp kotus Võro-[[Tarto]] vana maantii veeren. Kaugõst paistus õnnõ ütsik tükk müürü. Mäe päält võit häste nätäq Võro liina ja [[Võhandu]] jõkõ. 
 
 ===Aoluust===
-14. aastasaa edimäsel poolel oll Kantsimäe pääl Tarto piiskopi kindlüs. Joba 1322. aastagal käve leedulaisi vürst Gediminas sääl ja lahksõ linnuse maaha. Peräst tetti kindlüs jälki kõrda ja Jüriüü aigu oll sääl sakslaisi pääkorter. Edimäst kõrda häotati linnüst 1558. aastagal, kui ordu ja piiskopi mehe' so palama pandsõva ja noide perrä tulliva vindläse, kiä viil lahksõva. Hulk aigu ildämpa, 1627. aastagal, Ruutsi aol, nakati kindlüst säädmä, a 1656. aastagal lahoti tu peris är ja inämp es säädä. Tiidä um viil, et Ruutsi Karl katetõistkümnes olnu 1701. a. talvõ Kiräpääl. Peräst Võro liina tegemist nakati varemist kivvõ är vidäma ja ao minnõn jää es joht midägi perrä ku õnne nu jupi' mis näta um.
+14. aastasaa edimädsel poolõl oll' Kandsimäe pääl Tarto piiskopi liin. Joba 1322. aastagal käve leedulaisi vürst [[Gediminas]] sääl ja lahksõ liina maaha. Peräst tetti kants jälki kõrda ja Jüriüü aigu oll' sääl s'akslaisi pääkortin. Edimäst kõrda häotediq liina 1558. aastagal, ku ordu ja piiskopi meheq s'oo palama pannivaq ja noidõ perrä tullivaq vindläseq, kiä viil lahivaq. Hulka aigu ildampa, 1627. aastagal, Roodsi aol, nakati kantsi säädmä, a 1656. aastagal lahoti tuu peris ärq ja inämp es säädäq. Tiidäq um viil, et Roodsi Karl katõtõistkümnes olnuq 1701. a. talvõ Kiräpääl. Peräst Võro liina tegemist nakati varõmist kivve ärq vidämä ja ao minnen jää es muud midägi perrä ku õnnõ nuuq jupiq mis nätäq ummaq.
 
 ===Ehitüs===
-Kiräpää loss oll tettüs maakivvõst ja tellistõst. Teiva taa tüü talupoja'. Kui perräjäänü müürõ hästõ kaia sõs um näta, et so om ilostõ tett, kunstiperäselt. Edimõnõ osa oll majalinnüs. Tuulõ nakati sõs vahtsõmbit tornõ ja müürõ mano tegemä. Lõppõs saanu' 45 m kõrda 45 m külgiga ruut.
+Kiräpää loss oll' tett maakivvest ja savikivvest. Teiväq taa tüü talopojaq. Ku perräjäänüq müüre häste kaiaq, sõs um nätäq, et s'oo om ilostõ tett, kunstiperätselt. Edimäne osa oll' majalinnus. Tuulõ nakati sõs vahtsõmbit tornõ ja müüre mano tegemä. Lõpus saanuq 45 m kõrda 45 m külgiga kruut.
 
 [[Katõgooria:Põlva kihlkunna mäeq]]
