--- a/Zetod.mw
+++ b/Zetod.mw
@@ -1,5 +1,5 @@
 [[Pilt:Zetod 2007.jpg|pisi|Zetod 2007. aastagal]]
-'''Zetod''' om ansambli, koh mängväq pilli ja laulvaq viis [[Setomaa]]lt peri nuurtmiist. Näide mängmisviisi üteldäs "punklooris", taa om sego [[rahvalaul]]ust, [[rokk|rokist]] ja [[punk|pungist]]. Poisiq laulvaq õnnõ [[seto keel]]i.
+'''Zetod''' om ansambli, koh mängväq pilli ja laulvaq viis [[Setomaa]]lt peri nuurtmiist. Näide mängmisviisi üteldäs "punklooris", taa om sego [[rahvalaul]]ust, [[rokk|rokist]] ja [[punk|pungist]]. Poisiq laulvaq õnnõ [[seto kiil|seto keeli]].
 
 Ansambli Zetod nakas' kuun mängmä 2003. aastagal. Algusõn olliq sääl [[Vabarna Jalmar]], [[Linnusõ Artur]], [[Viskari Jaanus]] ja Purika Alar, a edimädse helütsõõri "Lätsi vällä kaema" pääl, miä tull' vällä 2005. aastaga suvõl, mängse trummi joba Puurmaa Heinar. Tuus aos nä olliq üles astnu joba uma poolõl saal kõrral, näütüses esiii Villändi folgil.
 
