*Empty MediaWiki Message*

--- a/Uma_Pido.mw
+++ b/Uma_Pido.mw
@@ -2,9 +2,7 @@
 [[Pilt:Kotjuh_rongkaik2.jpg|200px|thumb|II Uma Pido rongkäük Põlvan. Kotjuhi Dmitri pilt]]
 [[Pilt:Kotjuh istman.jpg|200px|thumb|II Uma Pido pääkontsõrt Indsikurmun. Kotjuhi Dmitri pilt]]
 
-'''Uma Pido''' om [[võro kiil|võrokeeline]] laulu- ja rahvapido, mink tradits'ooniga naati pääle
-2008. aastagal (31. lehekuu pääväl) [[Võro]]l. Tõnõ pido oll' 29. lehekuu pääväl 2010 [[Põlva]]n ja vahtsõt pito või
-jälq uutaq 2013. aastagal.
+'''Uma Pido''' om [[võro kiil|võrokeeline]] laulu- ja rahvapido, mink tradits'ooniga naati pääle 2008. aastagal (31. lehekuu pääväl) [[Võro]]l Kubija laululaval. Tõnõ pido oll' 29. lehekuu pääväl 2010 [[Põlva]]n Indsikurmu laululaval ja kolmas pido peeti 1. piimäkuu pääväl 2013 jälki Võrol. 
 
 Uma pido om innekõkkõ vana [[Võromaa]] rahva pido, miä avitas meelen pitäq
 taakandi keele ja vana Võromaa katsa [[kihlkund|kihlkunna]] illo ja ummamuudu olõmist.
@@ -12,7 +10,7 @@ Pidolõ oodõtas õks ka sõsarit ja velli, sõpro ja sulugaisi, naabriid ja
 võõriid, et ütenkuun lauldaq võro keelen ja tundaq rõõmo [[võrokõsõq|võrokõisi]] kuraasist ja
 ilmanägemisest. Pidoga käü üten ka muid tegemiisi nigu laat ja kontsõrdiq. Et
 pido inemiisil meelest ei läässi, kõrraldõdas pitõ vaihõl konkurssõ ja
-kontsõrtõ. Mõlõmbast pidost om tett ka film katõ DVD pääl, kon ommaq
+kontsõrtõ. Katõst edimädsest pidost om tett ka film katõ DVD pääl, kon ommaq
 pääkontsõrt ja muid pidotegemiisi. Pido ja Uma Laulu võigõlusõ laulõga om vällä annõt CD-plaat "[[Määne om seo maa?]]". 
 
 == Kaeq viil == 
