*Empty MediaWiki Message*

--- a/Zetod.mw
+++ b/Zetod.mw
@@ -20,3 +20,6 @@ Näide kolmas helütsõõr "Lätsi sanna" tull' vällä 2010. aastagal. Taa om p
 
 ==Välislingiq==
 *[http://www.zetod.ee Kodoleht]
+
+[[Katõgooria:Eesti ansambliq]]
+[[Katõgooria:Setokeelitsit laulõ laulnuq artistiq]]
