*Empty MediaWiki Message*

--- a/Palu_Jaan.mw
+++ b/Palu_Jaan.mw
@@ -50,3 +50,5 @@ Palu Jaani luuq, miä 1937. aastagal üles võetiq:
 (Eesti Teatri- ja Muusikamuuseum, August Pulst, Fond nr. M 234:1, „Mälestusi muusika alalt“, säilitusühik nr. 25, lk. 792 – 793).
 
 Ümbre pant kogost „Pärnumaa viiuldajad Teine“, lk. 7.
+
+[[Katõgooria:Kihnlasõq]]
