*Empty MediaWiki Message*

--- a/Hiiobi_Otto.mw
+++ b/Hiiobi_Otto.mw
@@ -37,3 +37,4 @@ http://tarkadekivi.wordpress.com/urvaste-viiuldajad-ott-hiiop-ja-kristjan-joakit
 http://tarkadekivi.wordpress.com/urvaste-viiuldajad-ott-hiiop-ja-kristjan-joakit/noodiraamat-urvaste-viiulilood-otto-hiiop-ja-kristjan-joakit/
 
 [[Katõgooria:Võromaa inemiseq]]
+[[Katõgooria:Eesti küläpillimeheq]]
