*Empty MediaWiki Message*

--- a/Teppo_August.mw
+++ b/Teppo_August.mw
@@ -44,4 +44,5 @@ Teppo Augusti ja timä pille kotsilõ või lukõq
 ==Lätteq==
 <references>
 
-[[Category:Võromaa inemiseq]]
+[[Katõgooria:Võromaa inemiseq]]
+[[Katõgooria:Eesti küläpillimeheq]]
