--- a/Palu_Jaan.mw
+++ b/Palu_Jaan.mw
@@ -52,3 +52,4 @@ Palu Jaani luuq, miä 1937. aastagal üles võetiq:
 Ümbre pant kogost „Pärnumaa viiuldajad Teine“, lk. 7.
 
 [[Katõgooria:Kihnlasõq]]
+[[Katõgooria:Eesti küläpillimeheq]]
