--- a/Rahvamuusiga.mw
+++ b/Rahvamuusiga.mw
@@ -1,5 +1,8 @@
 '''Rahvamuusiga''' om määntsegi rahva [[muusiga]], midä andas edesi suulidsõlt. Rahvamuusiga hulka kuulusõq [[rahvalaul]]uq ja pilliluuq, midä hariligult om mängit [[rahvatands|tands]]us.
 
+==Kaeq viil==
+*[[Võromaa rahvalaul]]
+
 [[Katõgooria:Muusiga]]
 
 [[en:Folk music#Traditional folk music]]
