*Empty MediaWiki Message*

--- a/Rahvamuusiga.mw
+++ b/Rahvamuusiga.mw
@@ -1,7 +1,7 @@
 '''Rahvamuusiga''' om määntsegi rahva [[muusiga]], midä andas edesi suulidsõlt. Rahvamuusiga hulka kuulusõq [[rahvalaul]]uq ja pilliluuq, midä hariligult om mängit [[rahvatands|tands]]us.
 
 ==Kaeq viil==
-*[[Võromaa rahvalaul]]
+*[[Võro rahvalaul]]
 
 [[Katõgooria:Muusiga]]
 
