*Empty MediaWiki Message*

--- a/Kivisild_(Tarto).mw
+++ b/Kivisild_(Tarto).mw
@@ -14,3 +14,6 @@ Silla õdagpoolõ häöt' [[1941]]. aastagal ärq [[Nõvvokogo Liit|Nõukogude L
 *[http://www.tartu.ee/?lang_id=1&menu_id=6&page_id=91 Kivisillast Tarto liina kodolehel]
 *[http://www3.acadlib.lv/lielbildes/sejums_NR8/BM08003Am.htm Pilt] [[Johann Christoph Brotze]] kollektsioonist:  Die Dorptsche Steinerne Brücke. Ein Denkmal der grossen Wiederherstellerin Dorpats. 1800 [ [[Eduard Philipp Körber]]; die Ansicht].
 *[http://www.dorpat.ru/index/stone_bridge_kivisild/0-14 Vinnekeeline hariv portaal Tarto liinast - Kivisild]
+
+[[Katõgooria:Tarto]]
+[[Katõgooria:Eesti sillaq]]
