*Empty MediaWiki Message*

--- a/Tadž_Mahal.mw
+++ b/Tadž_Mahal.mw
@@ -3,3 +3,4 @@
 '''Tadž Mahal''' om hoonõq Põh'a-[[India]]n [[Agra]] liinan, miä India suurmogul [[Džahan]] lask' ehitäq uma naasõ Arjumand Bano Begum'i mälehtüses. Naist tundas [[Mumtaz Mahal]]'i nime all, miä tähendäs [[pärsiä kiil|pärsiä keelen]] "palee valgust". Tä kuuli [[1630]]. a. nelätõistkümnendä latsõ sünnütämisel. Ehitämä naati [[1632]] ja ehitüs sai valmis [[1653]]. Ehitüsel tüüt' 20 000 inemist, noidõ hulgan meistreq [[Õuruupa]]st ja [[Kesk-Aasia]]st. Pää[[arhitekt]] oll' [[Ustad Isa]] (Ustad Ahmad) [[Lahore]]'ist.
 
 [[Katõgooria:Ehitüskunst]]
+[[Katõgooria:India ehitüseq]]
