--- a/Jeruusalemmä_templi.mw
+++ b/Jeruusalemmä_templi.mw
@@ -6,5 +6,5 @@ Ku juudiq viil templin jumalateenistüisi kõrraldiq, sis oll' templi ka väegaq
 
 Täämbädsel pääväl juudiq inämb templin ei käüq ja olõ-i ka vahtsõt templit ehitänüq. Vanast templist om alalõ jäänüq õnnõ üts müür, mink man pallõman kävvüq. Tuud müürü nimitedäs [[Ikumüür]]üs.
 
-[[katõgooria:ehitüskunst]]
+[[katõgooria:Iisraeli ehitüseq]]
 [[katõgooria:pühäkuaq]]
