--- a/Kivisild_(Tarto).mw
+++ b/Kivisild_(Tarto).mw
@@ -1,7 +1,7 @@
 [[Pilt:Kivisild, C. Schultz, ca 1880.jpg|thumb|Kivisild, ca 1880]]
-'''Kivisild''' oll' [[Tarto]]n 1784–[[1941]] parhilladsõ [[Kaar'sild (Tarto)|Kaar'silla]] paigal olnuq sild. Klassitsistlik sild oll' ehiteld Liivimaa meistre [[Siegfriedeni J. Carl ]]i projekti perrä  ni ehitüsmeistre [[Zaklowsky Johann]]i abil aastagal [[1779]]–[[1784]]. Ehitämisel kaotõdi ärq [[Imäjõgi|Imäjõõ]] põh'apoolinõ kõrvalinõ [[Harojõgi|harojõgi]] ja [[Holmi saar]]õst sai Imajõõ põh'akallõs. Sild oll' kavva ainugõnõ kivist sild [[Baltikum]]in.
+'''Kivisild''' oll' [[Tarto]]n 1784–[[1941]] parhilladsõ [[Kaar'sild (Tarto)|Kaar'silla]] kotussõ pääl olnuq sild. Klassitsistlik sild oll' ehiteld Liivimaa meistre [[Siegfriedeni J. Carl ]]i projekti perrä  ni ehitüsmeistre [[Zaklowsky Johann]]i abil aastagil [[1779]]–[[1784]]. Ehitämisel kaotõdi ärq [[Imäjõgi|Imäjõõ]] põh'apoolinõ kõrvalinõ [[Harojõgi|harojõgi]] ja [[Holmi saar]]õst sai Imajõõ põh'apoolinõ perv. Sild oll' kavva ainugõnõ kivist sild [[Baltikum]]in.
 
-Silla keskmäne jago oll' puust ja ülesnõsttõtav, ja tuu tekk'  laivaliikmisõ võimaligus. Katsa värehtikaarigaq Kivisild oll' 5,6 miitret laiu, väreht'ikaare man 4 miitrit laiu, ja tuu ehitämisele läts' umbõs 3000 [[graniit]]plokki. Kivisild sai valmis 16. süküskuu pääväl 1784. 
+Silla keskmäne jago oll' puust ja ülesnõstõtav, ja tuu tekk'  [[laiv]]aliikmisõ võimaligus. Katsa värehtikaarigaq Kivisild oll' 5,6 miitret laiu, väreht'ikaare man 4 miitrit laiu, ja tuu ehitämise pääle läts' umbõs 3000 [[graniit]]plokki. Kivisild sai valmis [[16. süküskuu päiv|16. süküskuu pääväl]] 1784. 
 
 Silla raekuapoolidsõ saina pääl olliq kats kivist tahvlit śaksa- ja ladinakeelitside tekstegaq: SISTE HIC IMPETUS FLUMEN CATHARINA II IUBET CUIUS MUNIFICENTIA HAEC MOLES IN COMMODUM PUBLICUM EXSTRUCTA LIVONIAQUE PRIMO PONTE LAPIDEO ADORNATA MDCCLXXXIII ('"Jõgi, piäq siin umma vuulu," käsk [[Katariina II]], kink heldüsest seo sild om ehiteld ja kiä om Liivimaad ilostanuq edimädse kivisillagaq aastagal 1783').
 
