--- a/16._süküskuu_päiv.mw
+++ b/16._süküskuu_päiv.mw
@@ -7,7 +7,7 @@
 * ...
 
 === [[Eesti]]n ===
-* ...
+* [[1784]] - [[Tarto]]n tetti vallalõ valmissaanuq [[Kivisild (Tarto)|Kivisild]].
 
 === Maailman ===
 * ...
