*Empty MediaWiki Message*

--- a/Tarto.mw
+++ b/Tarto.mw
@@ -49,15 +49,15 @@ File:Tartu, botanická zahrada.jpeg|Botaanigaaid
 File:Turuhoone_night_2008.JPG|Vana turuhoonõq üüse
 File:Tartu_Cathedral_Ruins_3.JPG|Tuumkerigu varõmõq
 
-File:Town_Hall23_2008.JPG|Tarto raekoda Toomõmäelt alla kaiaq
+File:Town_Hall23_2008.JPG|Tarto raatus Toomõmäelt alla kaiaq
 File:Engelsbrücke Dämmerung.JPG|Englisild talvõl
 File:Suudlevad-tudengid.jpg|Suudõlõvidõ tudõngidõ kujo
 File:Wifi accesspoint in tartu estonia.jpg|Ülikooli kohvigu iin
 
-File:Hanseatic Days of Tartu 2007 Estonia2.JPG|Hansapäivi tähüstämine
+File:Hanseatic Days of Tartu 2007 Estonia2.JPG|Hansapäivi pidämine
 File:Barclay square 2007.jpg|Barclay plats
-File:Tartu 1866.jpg|Tartu 1866. aastagal
-File:Tartu, osvětlená radnice.jpg|Raekoda hämäräga
+File:Tartu 1866.jpg|Tarto 1866. aastagal
+File:Tartu, osvětlená radnice.jpg|[[Raatus]] hämärän
 
 </gallery>
 
