*Empty MediaWiki Message*

--- a/Tarto.mw
+++ b/Tarto.mw
@@ -27,12 +27,14 @@
 [[Image:Tartu_flag.png|150px|Tarto lipp]]<br>'''[[Tarto lipp]]'''<br><br>[[Image:Tartu coatofarms.png|150px|Tarto vapp]]<br>'''[[Tarto vapp]]'''</td></tr></table>
 -->
 
-'''Tarto''' om liin Lõunõ-[[Eesti]]n Suurõ Imäjõõ veeren. Tarto om suurusõ poolõst tõnõ liin Eestin. 2004. aastagal elli Tarton 101 297 inemist. 
+'''Tarto''' om liin Lõunõ-[[Eesti]]n [[Imäjõgi|Suurõ Imäjõõ]] veeren. Tarto om suurusõ poolõst tõnõ liin Eestin. 2013. aastagal elli Tarton 98 480 inemist. 
 
 Tõisi nimmi: ''Tarbatu, Dorpat, Dorpt, Derpt, Jurjev''. 
-<!--
-[[Image:tartu_university_christmas.jpg|thumb|Tarto Ülikuul]]
--->
+
+Tarto om tunnõt ku ülikooliliin. [[Tarto Ülikuul]] om kõgõ vanõmb ülikuul Eestin.
+
+== Aolugu == 
+
 
 == Midä kaiaq tasos ==
 * [[Imäjõgi]]
