*Empty MediaWiki Message*

--- a/Tarto.mw
+++ b/Tarto.mw
@@ -33,7 +33,7 @@ Tõisi nimmi: ''Tarbatu, Dorpat, Dorpt, Derpt, Jurjev''.
 
 Tarto om tunnõt ku ülikooliliin. [[Tarto Ülikuul]] om kõgõ vanõmb ülikuul Eestin.
 
-== Aolugu == 
+Tarto ütes tähtsämbäs sümbolis om olnuq [[Kivisild (Tarto)|Kivisild]], miä häötediq ärq [[Tõõnõ ilmasõda|Tõõsõ ilmasõa]] käügin. 
 
 
 == Midä kaiaq tasos ==
